--- a/static/room.html
+++ b/static/room.html
@@ -73,8 +73,8 @@
           <div id="video-grids"></div>
         </div>
         <div class="main_controls">
-          <div class="main_controls_block"></div>
-          <div class="main_controls_block">
+          <div class="main_controls_block mobileDiv"></div>
+          <div class="main_controls_block mainCenterDiv">
             <div class="main_controls_button" onclick="muteUnmute()">
               <i class="fas fa-microphone" id="mute-icon"></i>
               <span id="muteText">Mute</span>
@@ -83,28 +83,94 @@
               <i class="fas fa-video" id="video-icon"></i>
               <span id="videoText">Stop Video</span>
             </div>
-            <div class="main_controls_button" onclick="showchat()">
+            <div class="main_controls_button mobileDiv" onclick="showchat()">
               <i class="fas fa-comment-alt"></i>
               <span>Chat</span>
             </div>
-            <div class="main_controls_button" onclick="invitebox()">
+            <div class="main_controls_button mobileDiv" onclick="invitebox()">
               <i class="fas fa-user-plus"></i>
               <span>Invite</span>
             </div>
             <div
-              class="main_controls_button"
+              class="main_controls_button mobileDiv"
               id="screenShare"
               onclick="startScreenShare()"
             >
               <i class="fas fa-desktop"></i>
               <span>Share</span>
             </div>
+            <div class="btnControl mobileDiv1">
+              <div class="btn-group">
+                <div
+                  class="main_controls_button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <i class="fa fa-phone-square" aria-hidden="true"></i>
+                  <span>End Call</span>
+                </div>
+                <div class="dropdown-menu dropdown-menu-right">
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    onClick="endCall()"
+                  >
+                    Leave Call
+                  </button>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    onClick="endCallForAll()"
+                  >
+                    End Meeting for All
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="btnControl mobileDiv1">
+              <div class="btn-group">
+                <div
+                  class="main_controls_button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                  <span>More</span>
+                </div>
+                <div class="dropdown-menu dropdown-menu-right">
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    onclick="showchat()"
+                  >
+                    <i class="fas fa-comment-alt"></i> Chat
+                  </button>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    onclick="invitebox()"
+                  >
+                    <i class="fas fa-user-plus"></i> Invite
+                  </button>
+                  <button
+                    class="dropdown-item"
+                    type="button"
+                    onclick="startScreenShare()"
+                  >
+                    <i class="fas fa-desktop"></i> Share
+                  </button>
+                  <div class="btnControl" id="visitNotes"></div>
+                </div>
+              </div>
+            </div>
             <!--div class="main_controls_button" id="recording" onclick="recordingHandle()">
                       <i class="fas fa-record-vinyl"></i>
                       <span id="recordText">Start Recording</span>
                   </div-->
           </div>
-          <div class="main_controls_block">
+          <div class="main_controls_block mobileDiv">
             <div class="btnControl" id="visitNotes"></div>
             <div class="main_controls_button btnControl">
               <div class="btn-group">
