--- a/static/room.html
+++ b/static/room.html
@@ -139,7 +139,7 @@
                   <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                   <span>More</span>
                 </div>
-                <div class="dropdown-menu dropdown-menu-right">
+                <div class="dropdown-menu dropdown-menu-right moreIcons">
                   <button
                     class="dropdown-item"
                     type="button"
@@ -161,7 +161,7 @@
                   >
                     <i class="fas fa-desktop"></i> Share
                   </button>
-                  <div class="btnControl" id="visitNotes"></div>
+                  <div class="visitNotes"></div>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                   </div-->
           </div>
           <div class="main_controls_block mobileDiv">
-            <div class="btnControl" id="visitNotes"></div>
+            <div class="btnControl visitNotes"></div>
             <div class="main_controls_button btnControl">
               <div class="btn-group">
                 <button
